Add build script to compile tsc with npm run build / changed index.js to index.ts

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "nodemon src/"
+    "start": "nodemon src/index.ts",
+    "build": "tsc -p ./"
   }
 }
