--- a/package.json
+++ b/package.json
@@ -4,16 +4,27 @@
   "description": "Find cars to rent",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server/index.ts",
+    "server": "nodemon src/server/index.ts",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "tsc -p ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "@types/express": "^4.17.2",
+    "@types/node": "^13.5.0",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.5"
   }
 }
