--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "apollo-server-express": "^2.9.16",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "graphql": "^14.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.2",
+    "@types/graphql": "^14.5.0",
     "@types/node": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
