--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "graphql": "^14.6.0",
+    "mongodb": "^3.5.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -24,6 +25,7 @@
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.2",
     "@types/graphql": "^14.5.0",
+    "@types/mongodb": "^3.3.15",
     "@types/node": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
