--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon src/server/index.ts",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "tsc -p ./",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "ts-node temp/seed.ts"
   },
   "author": "",
   "license": "ISC",
