--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.6.0",
+    "lodash.merge": "^4.6.2",
     "mongodb": "^3.5.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
@@ -28,6 +29,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/graphql": "^14.5.0",
+    "@types/lodash.merge": "^4.6.6",
     "@types/mongodb": "^3.3.15",
     "@types/node": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
