--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.12.26",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "antd": "^3.26.11",
     "apollo-boost": "^0.4.7",
     "graphql": "^14.6.0",
     "react": "^16.12.0",
