--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "tsc -p ./",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "ts-node temp/seed.ts"
+    "seed": "ts-node temp/seed.ts",
+    "clear": "ts-node temp/clear.ts"
   },
   "author": "",
   "license": "ISC",
